--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
-.App {
-  text-align: center;
+:root {
+  --dark: #001529;
+  --white: #fff;
+  --blue:  rgb(16, 162, 247);
 }
+
+@import '~antd/dist/antd.css';
 
 .App-logo {
   height: 40vmin;
@@ -8,32 +12,5 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px)
-  }
-  100% {
-    transform: translateY(0px)
-  }
 }
