--- a/src/components/ContentWrapper/ContentWrapper.module.css
+++ b/src/components/ContentWrapper/ContentWrapper.module.css
@@ -2,6 +2,11 @@
   padding: 80px;
   width: 700px;
   margin: auto;
-  box-shadow: 0px 0px 2px var(--dark);
+  box-shadow: 0 1px 2px rgba(0,0,0,.25);
   margin-top: 60px;
+}
+
+
+.wrapper.large {
+  width: 800px;
 }
